# ppl_semanticscholar_datasets

./: README.md  pyproject.toml
ppl_semanticscholar_datasets/: __init__.py  s2_api.py  s2_datasets.py
